app/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ads-b-map
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ads-b-map
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ads-b-map
    spec:
      containers:
      - name: ads-b-map
        image: quay.io/redhatgov/ads-b-map:v0.1.6
        imagePullPolicy: IfNotPresent
        ports:
         - containerPort: 8080
           protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
