app/ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ads-b-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ads-b-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ads-b-service
    spec:
      containers:
      - name: ads-b-service
        image: quay.io/redhatgov/ads-b-service:v0.0.2
        imagePullPolicy: IfNotPresent
        ports:
         - containerPort: 8888
           protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
